@@ -58,6 +58,7 @@ This reduces the time required to build SysON, especially when using Spring Tool
 - Add `New Subsetting` tool on `PartUsage` to create a `Subsetting` edge and a `PartUsage` that is subset.
 - Add `New Feature Typing` tool on `PartUsage` to create a `FeatureTyping` edge and a `PartDefinition`.
 - Add `New Binding Connector As Usage` tool on `PartUsage` in Interconnection view diagram.
+- Add `New Flow Connection` tool on `PartUsage` in Interconnection view diagram.
 
 == New features
 
